Fixes to scrollbars

--- a/content/themes/handbook/sass/base/_prism.scss
+++ b/content/themes/handbook/sass/base/_prism.scss
@@ -25,7 +25,6 @@ pre[class*="language-"] {
   line-height: 1.4;
   overflow: auto;
   white-space: pre;
-  overflow: hidden;
 }
 
 pre[class*="language-"] {
@@ -34,6 +33,18 @@ pre[class*="language-"] {
   padding: 1.25rem;
   border-left: 20px solid #ddd;
   overflow-x: auto;
+}
+
+pre[class*="language-"]::-webkit-scrollbar {
+  height: 3px;
+}
+
+pre[class*="language-"]::-webkit-scrollbar-track {
+  border-radius: 3px;
+}
+
+pre[class*="language-"]::-webkit-scrollbar-thumb {
+  border-radius: 3px;
 }
 
 code,
